[package]
name = "ebacktrace"
version = "0.3.0"
edition = "2018"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = ["error", "backtrace"]
categories = ["rust-patterns"]
description = "A simple error wrapper which captures a backtrace and can carry an optional textual description"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/ebacktrace-rust"
readme = "README.md"


[badges]
appveyor = { repository = "KizzyCode/ebacktrace-rust" }


[features]
default = ["derive_display"]
derive_display = []


[dependencies]
# TODO: Drop-in until `std::backtrace` is stable
backtrace = "0.3"


[profile.release]
overflow-checks = true


[profile.bench]
overflow-checks = true